<resources>
    <string name="app_name">BakeryApp</string>


    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Bottom Menu
    <string name="view_stock">View Stock</string>
    <string name="add_stock">Add Stock</string>

    //Side Menu
    <string name="stock_move">Stock &amp; Move</string>
    <string name="stock">Stock</string>
    <string name="remove_stock">Remove Stock</string>
    <string name="move_stock">Move Stock</string>
    <string name="count_stock">Physical Count</string>
    <string name="stock_summary">Stock Summary</string>
    <string name="menu_item">Item</string>
    <string name="buy_sell">Buy &amp; Sell</string>
    <string name="crew_craft">Crew &amp; Craft</string>
    <string name="dashboard">Dashboard</string>
    <string name="menu_reports">Reports</string>
    <string name="log_out">Log Out</string>

    //Add Item
    <string name="create_item">Create Item</string>
    <string name="item_type">Type</string>
    <string name="item_product">Product</string>
    <string name="item_service">Service</string>
    <string name="item_category">Category</string>
    <string name="item_name">Name</string>
    <string name="item_sku">SKU</string>
    <string name="item_units">Unit</string>
    <string name="cost_of_price">Cost Price</string>
    <string name="include_tax">Incl Tax</string>
    <string name="selling_price">Sale Price</string>
    <string name="hsn_code">HSN Code</string>
    <string name="tax">Tax %</string>
    <string name="trackInventory">Track Inventory</string>

    <string name="item">Item</string>
    <string name="filter_items">Filter Items</string>
    <string name="view_item">View Item</string>
    <string name="view_price_history">Price History</string>
    <string name="update_item">Update Item</string>
    <string name="view_by_location">By Location</string>
    <string name="view_by_item">By Item</string>


    //Add Stock
    <string name="add_stock_text">Add Stock</string>
    <!--    <string name="add_stock_item">Add Stock By Item</string>-->
    <string name="add_stock_item">By Item</string>
    <string name="add_item_text">Add Item</string>
    <string name="add_location_text">Add Location</string>
    <!--    <string name="add_location_item">Add Stock By Location</string>-->
    <string name="add_location_item">By Location</string>
    <string name="create_stock_text">Create Stock</string>
    <string name="location">Location</string>
    <string name="quantity">Quantity</string>
    <string name="add_item">Add Item</string>

    //View Stock

    <string name="view_stock_details">View Stock Details</string>
    <string name="void_stock">Void Stock</string>
    <string name="search_view">search here</string>
    <string name="void_item">Void Item</string>
    <string name="alert_no">No</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_confirm">Confirm</string>
    <string name="modified_on">Modified on</string>

    //move stock

    <string name="from_location">From Location</string>
    <string name="available_qty">Avl. Qty</string>
    <string name="to_available_qty">To Loc Avl. Qty</string>
    <string name="reason">Reason</string>
    <string name="tolocation">To Location</string>
    <string name="qty_move">Quantity to Move</string>
    <string name="mrp">MRP</string>
    <string name="please_enter_passcode">Please Enter Passcode</string>
    <string name="transaction_id">Transaction ID</string>

    //movement
    <string name="movement">MOVEMENT</string>
    <string name="availability">AVAILABILITY</string>

    <string name="fromdate">From Date</string>
    <string name="todate">To Date</string>
    <string name="transaction">Transaction</string>
    <string name="show">Show</string>
    <string name="shopName">ShopName</string>
    <string name="addItem">AddItem</string>
    <string name="date">Date</string>
    <string name="rupeeSymbol">\u20B9</string>
    <string name="nodata">NoData</string>
    <string name="viewSummary">View Summary</string>

    <string-array name="filterType">
        <item>All</item>
        <item>Add</item>
        <item>Remove</item>
        <item>Void</item>
    </string-array>
    <string-array name="reasonType">
        <item>All</item>
    </string-array>

</resources>
