<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_Home"
        android:title="@string/stock_move"
        android:icon= "@drawable/password"
      />
    <menu>
    <group>
    <item
        android:id="@+id/add_item"
        android:title= "@string/menu_item"
        android:icon= "@drawable/password"
      />
    <item
        android:id="@+id/nav_add_Stock"
        android:title="@string/add_stock"
        android:icon= "@drawable/password"
      />
    <item
        android:id="@+id/nav_remove_stock"
        android:title="@string/remove_stock"
        android:icon= "@drawable/password"
      />
    <item
        android:id="@+id/nav_count_stock"
        android:icon= "@drawable/password"
        android:title="@string/count_stock"/>

    <item
        android:id= "@+id/nav_stock_summary"
        android:icon= "@drawable/password"
        android:title= "@string/stock_summary"/>
    </group>
    </menu>
    <item
        android:id= "@+id/nav_sell"
        android:icon= "@drawable/password"
        android:title= "@string/buy_sell" />
    <item
        android:id= "@+id/nav_craft"
        android:icon= "@drawable/password"
        android:title= "@string/crew_craft" />
    <item
        android:id= "@+id/nav_reports"
        android:icon= "@drawable/password"
        android:title= "@string/menu_reports" />
    <item
        android:id="@+id/nav_"
        android:icon="@drawable/password"
        android:title="@string/log_out"/>

</menu>