<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".StockSummary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:hint="@string/fromdate"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/dimen_15sp" />

        <EditText
            android:id="@+id/edtfromDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:imeOptions="actionNext"
            android:hint="@string/fromdate"
            android:inputType="text"
            android:textSize="@dimen/dimen_12sp"
            android:textColor="@color/black" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:hint="@string/todate"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/dimen_15sp" />

        <EditText
            android:id="@+id/edttoDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/todate"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textSize="@dimen/dimen_12sp"
            android:textColor="@color/black" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:hint="@string/transaction"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/dimen_15sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:entries="@array/filterType"
            android:textColorHint="@color/black"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textSize="@dimen/dimen_12sp"
            android:textColor="@color/black" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:hint="@string/item"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/dimen_15sp" />

        <EditText
            android:id="@+id/edtItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHint="@color/black"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textSize="@dimen/dimen_12sp"
            android:textColor="@color/black" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:hint="@string/location"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/dimen_15sp" />

        <EditText
            android:id="@+id/edtlocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:hint="@string/location"
            android:textSize="@dimen/dimen_12sp"
            android:textColor="@color/black" />

    </LinearLayout>
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:hint="@string/reason"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/dimen_15sp" />

        <Spinner
            android:id="@+id/edtReason"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHint="@color/black"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:entries="@array/reasonType"
            android:textSize="@dimen/dimen_12sp"
            android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/show"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:textColorHint="@color/white"
            android:textSize="@dimen/dimen_12sp"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/summaryRecycler"
        android:layout_margin="5dp"
        />

</LinearLayout>