<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/Dashboard"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/dimen_16sp"
                    android:gravity="center_vertical"
                    android:text="@string/dashboard">
                </TextView>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorAccent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stock_move_menu"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/dimen_16sp"
                    android:gravity="center_vertical"
                    android:text="@string/stock_move">
                </TextView>

                <ImageView
                    android:id="@+id/down_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/ic_down_arrow"
                    android:padding="10dp"
                    android:layout_marginRight="5dp" />

            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginTop="4dp"
                android:background="@color/colorAccent" />
            <LinearLayout
                android:id="@+id/nav_submenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:id="@+id/item_menu"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/menu_item">
                    </TextView>
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="@color/colorAccent" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/add_stock_menu"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/add_stock">
                    </TextView>
                </LinearLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/colorAccent" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/remove_stock_menu"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/remove_stock">
                    </TextView>
                </LinearLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/colorAccent" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/move_stock_menu"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/move_stock">
                    </TextView>
                </LinearLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/colorAccent" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/count_stock_menu"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/count_stock">
                    </TextView>
                </LinearLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/colorAccent" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/stock_summary_menu"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/stock_summary">
                    </TextView>
                </LinearLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:id="@+id/buy_sell_menu"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/dimen_16sp"
                    android:gravity="center_vertical"
                    android:text="@string/buy_sell">
                </TextView>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorAccent" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:id="@+id/crew_craft_menu"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/dimen_16sp"
                    android:gravity="center_vertical"
                    android:text="@string/crew_craft">
                </TextView>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorAccent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:id="@+id/reports_menu"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/dimen_16sp"
                    android:gravity="center_vertical"
                    android:text="@string/menu_reports">
                </TextView>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorAccent" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:id="@+id/logout_menu"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/dimen_16sp"
                    android:gravity="center_vertical"
                    android:text="@string/log_out">
                </TextView>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorAccent" />
            </LinearLayout>



        </LinearLayout>



    </com.google.android.material.navigation.NavigationView>
    <!--    app:menu="@menu/nav_menu"-->

</androidx.drawerlayout.widget.DrawerLayout>