<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerview"
        android:layout_above="@+id/linear_two" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dimen_10sp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:id="@+id/linear_one">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/view_by_location"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/rectangle_bg"
            android:padding="@dimen/dimen_10sp"
            android:textSize="@dimen/dimen_16sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/view_by_item"
            android:gravity="center"
            android:background="@drawable/rectangle_bg"
            android:layout_weight="1"
            android:padding="@dimen/dimen_10sp"
            android:textSize="@dimen/dimen_16sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_two"
        android:layout_above="@+id/linear_one"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/view_item"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_filter" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_items"
                android:gravity="center"
                android:textSize="@dimen/dimen_16sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/create_item"
                android:src="@drawable/ic_plus"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_item"
                android:gravity="center"
                android:textSize="@dimen/dimen_16sp"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>